[package]
name = "codebase-context-graph"
version = "0.1.0"
edition = "2024"
description = "Rust launcher and packager for the codebase-context-graph tool"

[[bin]]
name = "codebase-context-graph"
path = "main.rs"

[[bin]]
name = "codebase-context-graph-gui"
path = "gui.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
eframe = "0.29"
notify = "8.0"
rand = "0.8"
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25.1"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5"
